--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,186 +1,26 @@
-
-
-
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hind:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+
+@import'./hamburger-btn.scss';
+@import'./menu.scss';
+@import'./global';
+@import'./animations';
+@import'./hovers';
+@import'./header';
+@import'./swiper';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    @apply font-text tracking-wider;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    @apply font-heading tracking-widest;
-}
-
-.wrapper{
-    @apply px-6 md:px-12 2xl:px-0 pt-24 last-of-type:pb-24  mx-auto flex flex-col justify-center items-center
-}
 
 
-
-
-.link-hover {
-    position: relative;
-
-    &::after {
-        position: absolute;
-        content: "";
-        top: 100%;
-        left: 0;
-        width: 100%;
-        height: 1px;
-
-        transform: scaleX(0);
-        transform-origin: right;
-        transition: transform 0.5s;
-        @apply bg-gray-500;
+  
+  @keyframes opacity {
+    0% {
+     opacity:0
     }
-
-    // &:hover {
-    //   color: #95a5a6;
-    // }
-
-    &:hover::after {
-        transform: scaleX(1);
-        transform-origin: left;
+    100% {
+      opacity:1
     }
-}
-
-
-
-
-
-a 
-{
-    position:relative;
-    &::after {
-        position: absolute;
-        content: "";
-        top: 100%;
-        left: 0;
-        width: 100%;
-        height: 1px;
-    
-        transform: scaleX(0);
-        transform-origin: right;
-        transition: transform 0.5s;
-        @apply bg-secondary-400
-      }
-
-      &:hover {
-        color: #95a5a6;
-      }
-
-      &:hover::after {
-        transform: scaleX(1);
-        transform-origin: left;
-      }
-    }
-
-
-    .box {
-        @apply flex justify-center items-center gap-12;
-    }
-    
-    .tel
-    {
-        position:relative;
-        
-        &::after {
-            position: absolute;
-            content: "";
-            top: 100%;
-            left: 0;
-            width: 100%;
-            height: 1px;
-        
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: transform 0.5s;
-            @apply bg-secondary-400
-          }
-    
-          &:hover {
-            color: #95a5a6;
-          }
-    
-          &:hover::after {
-            transform: scaleX(1);
-            transform-origin: left;
-          }
-        }
-
-
-        .close:hover,
-.close:focus {
-  box-shadow: 
-    inset -5.5em 0 0 0  #333,
-    inset 5.5em 0 0 0 #333;  
-    
-}
-
-
-
-.swiper {
-  margin: 100px auto;
-  width: 320px;
-  height: 240px;
-}
-
-.swiper-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 22px;
-  font-weight: bold;
-  color: #fff;
-}
-
-.ken-burns {
-  animation: kenburns 15s ease-out infinite alternate;
-}
-
-@keyframes kenburns {
-  0% {
-      transform: scale(1) translateY(0);
-      transform-origin: 50% 16%;
   }
-  100% {
-      transform: scale(1.3) translateY(-15px);
-      transform-origin: top;
-  }
-}
-
-
-.swiper {
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.swiper-slide {
- @apply w-[240px] h-[240px] xs:w-[330px] xs:h-[330px] sm:w-[500px] sm:h-[500px]
- 
-}
-
-
-
-.swiper-slide .info {
-        transition: all 0.5s;
-    }
-    .swiper-slide-active .info {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  
