--- a/resources/scss/_animations.scss
+++ b/resources/scss/_animations.scss
@@ -23,3 +23,38 @@
     }
   }
 
+//HEADING-ANIMATION
+
+.tracking-in-expand {
+  opacity: 0;
+	animation: tracking-in-expand 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+//TEXT-ANIMATION
+.text-focus-in {
+	animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+@keyframes text-focus-in {
+  0% {
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
