add apartments page

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,6 +7,7 @@
 @import'./hovers';
 @import'./header';
 @import'./swiper';
+@import'./hero-images.scss';
 
 @tailwind base;
 @tailwind components;
@@ -16,5 +17,6 @@
 
 
 
-
   
+
+
