working on gallery

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,6 +8,8 @@
 @import'./header';
 @import'./swiper';
 @import'./hero-images.scss';
+@import './gallery.scss';
+
 
 @tailwind base;
 @tailwind components;
