--- a/resources/scss/_global.scss
+++ b/resources/scss/_global.scss
@@ -23,6 +23,9 @@ h6 {
 .h2 {
     @apply text-3xl 2xl:text-5xl font-bold tracking-wide leading-snug;
 }
+.h3 {
+    @apply text-xl  font-bold tracking-wide leading-snug;
+}
 
 .text {
     @apply font-light leading-relaxed;
