--- a/resources/scss/gallery.scss
+++ b/resources/scss/gallery.scss
@@ -1,3 +1,9 @@
+
+.container{
+    margin: 0 auto;
+    width: 100%;
+}
+
 .grid-gallery {
     width: 100%;
     max-width: 1280px;
@@ -10,10 +16,11 @@
     grid-gap: 20px;
 }
 
-.grid-gallery .grid-item {
+ .grid-item {
     position: relative;
     background-color: #efefef;
     overflow: hidden;
+    animation: SclAnimation .4s ease;
 }
 
 .grid-gallery .grid-item img {
@@ -43,5 +50,116 @@
     .grid-gallery .grid-item:nth-child(3n-2) {
         grid-column: unset;
         grid-row: unset;
+    }
+}
+
+
+
+
+//
+
+// #projects{
+//     width: 100%;
+//     display:flex;
+//     align-items: center;
+//     padding: 60px;
+
+// }
+// .container{
+//     width: 80%;
+//     min-width: 1200px;
+//     margin: 0 auto;
+// }
+
+.items-links{
+    width: 60%;
+    margin: 40px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+
+}
+
+.item-link{
+    border: 2px solid black;
+    padding: 10px 30px;
+    transition:  .4s ease;
+}
+
+.item-link:hover{
+    background-color: black;
+    color:white
+}
+
+.menu-active{
+    background-color: black;
+    color:white
+}
+
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+}
+
+.project-img{
+    overflow: hidden;
+    box-shadow: 0 0 4px rgba(175,175,175,0.4);
+    height: 400px;
+    animation: SclAnimation .4s ease;
+}
+
+@keyframes SclAnimation{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+.project-img:hover img{
+    transform: scale(1.1);
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    transition: .4s ease;
+}
+
+@media (max-width:1024px){
+    .container{
+        width: 90%;
+    }
+    .items-links{
+        width: 90%;
+    }
+}
+
+@media (max-width:991px){
+    .items-links{
+        width: 100%;
+    }
+    .gallery{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width:600px){
+    .items-links{
+        justify-content: space-between;
+        gap:0;
+        flex-wrap:wrap
+    }
+
+    .gallery{
+        grid-template-columns: 1fr;
+    }
+    .project-img{
+        height: max-content;
     }
 }
