--- a/resources/scss/_global.scss
+++ b/resources/scss/_global.scss
@@ -6,8 +6,14 @@ body {
     @apply font-text tracking-wider;
 }
 
+
+//CONTAINERS
 .wrapper{
     @apply px-6 md:px-12 2xl:px-0 pt-24 last-of-type:pb-24  mx-auto flex flex-col justify-center items-center
+}
+
+.section{
+
 }
 
 //TEXT
@@ -28,8 +34,9 @@ h6 {
 }
 
 .text {
-    @apply font-light leading-relaxed;
+    @apply font-thin leading-7;
 }
+
 
 
 
