--- a/resources/scss/swiper.scss
+++ b/resources/scss/swiper.scss
@@ -1,9 +1,14 @@
   
-  .swiper-slide-active .info {
-    opacity: 1;
-    transform: translateY(0);
-    animation: sopacity .6s ease-in-out forwards;
-  }
-
-
+    //HOME PAGE
+    #apartament-swiper swiper-container{
+      width:95% !important;
+    }
+    #apartament-swiper .swiper-slide-active .info {
+      opacity: 1;
+      transform: translateY(0);
+      animation: sopacity .6s ease-in-out forwards;
+    }
   
+
+
+
