--- a/resources/scss/_animations.scss
+++ b/resources/scss/_animations.scss
@@ -1,15 +1,24 @@
 .ken-burns {
-    animation: kenburns 15s ease-out infinite alternate;
+    // animation: kenburns 15s ease-out infinite alternate;
+    animation: kenburns 25s ease-out both;
   }
   
   @keyframes kenburns {
+    // 0% {
+    //     transform: scale(1) translateY(0);
+    //     transform-origin: 50% 16%;
+    // }
+    // 100% {
+    //     transform: scale(1.3) translateY(-15px);
+    //     transform-origin: top;
+    // }
     0% {
-        transform: scale(1) translateY(0);
-        transform-origin: 50% 16%;
+      transform: scale(1) translateY(0);
+      transform-origin: 50% 16%;
     }
     100% {
-        transform: scale(1.3) translateY(-15px);
-        transform-origin: top;
+      transform: scale(1.25) translateY(-15px);
+      transform-origin: top;
     }
   }
 
