--- a/resources/scss/_global.scss
+++ b/resources/scss/_global.scss
@@ -42,10 +42,10 @@ h6 {
 
 .title{
     &--big{
-        @apply text-3xl 2xl:text-5xl font-bold tracking-wide leading-snug;
+        @apply text-3xl 2xl:text-5xl font-bold tracking-wide leading-7;
     }
     &--small{
-        @apply text-3xl 2xl:text-4xl font-bold tracking-wide leading-snug
+        @apply text-3xl 2xl:text-4xl font-bold tracking-wide leading-7;
     }
 }
 
