--- a/resources/scss/gallery.scss
+++ b/resources/scss/gallery.scss
@@ -6,14 +6,15 @@
 
 .grid-gallery {
     width: 100%;
-    max-width: 1280px;
+    max-width: 1350px;
     margin: 0 auto;
-    padding: 50px 20px;
+    padding: 0 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: 250px;
     grid-auto-flow: dense;
     grid-gap: 20px;
+    @apply pb-24
 }
 
  .grid-item {
@@ -56,30 +57,17 @@
 
 
 
-//
 
-// #projects{
-//     width: 100%;
-//     display:flex;
-//     align-items: center;
-//     padding: 60px;
+// .items-links{
+//     width: 60%;
+//     margin: 40px auto;
+//     display: flex;
+//     // align-items: center;
+//     // justify-content: center;
+//     flex-wrap:wrap;
+//     gap: 40px;
 
 // }
-// .container{
-//     width: 80%;
-//     min-width: 1200px;
-//     margin: 0 auto;
-// }
-
-.items-links{
-    width: 60%;
-    margin: 40px auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
-
-}
 
 .item-link{
     border: 2px solid black;
@@ -150,11 +138,11 @@ img{
 }
 
 @media (max-width:600px){
-    .items-links{
-        justify-content: space-between;
-        gap:0;
-        flex-wrap:wrap
-    }
+    // .items-links{
+    //     justify-content: space-between;
+    //     gap:0;
+    //     flex-wrap:wrap
+    // }
 
     .gallery{
         grid-template-columns: 1fr;
