--- a/resources/scss/swiper.scss
+++ b/resources/scss/swiper.scss
@@ -1,17 +1,17 @@
 //HOME PAGE
-#apartament-swiper swiper-container {
+#home_apartaments_swiper swiper-container {
     // width:95% !important;
     max-width: 100vh !important;
 }
 
 @media (min-width: 1024px) {
-    #apartament-swiper swiper-container {
+    #home_apartaments_swiper swiper-container {
         width: 95% !important;
         max-width: 95% !important;
     }
 }
 
-#apartament-swiper .swiper-slide-active .info {
+#home_apartaments_swiper .swiper-slide-active .info {
     opacity: 1;
     transform: translateY(0);
     animation: sopacity 0.6s ease-in-out forwards;
