--- a/resources/scss/_animations.scss
+++ b/resources/scss/_animations.scss
@@ -1,62 +1,80 @@
+.text-animation,
+.heading-animation,
+.image-animation {
+    @apply md:opacity-0;
+}
+
 .ken-burns {
     // animation: kenburns 15s ease-out infinite alternate;
     animation: kenburns 25s ease-out both;
-  }
-  
-  @keyframes kenburns {
-   
+}
+
+@keyframes kenburns {
     0% {
-      transform: scale(1) translateY(0);
-      transform-origin: 50% 16%;
+        transform: scale(1) translateY(0);
+        transform-origin: 50% 16%;
     }
     100% {
-      transform: scale(1.25) translateY(-15px);
-      transform-origin: top;
+        transform: scale(1.25) translateY(-15px);
+        transform-origin: top;
     }
-  }
+}
 
-
-  @keyframes opacity {
+@keyframes opacity {
     0% {
-     opacity:0
+        opacity: 0;
     }
     100% {
-      opacity:1
+        opacity: 1;
     }
-  }
+}
 
 //HEADING-ANIMATION
 
 .tracking-in-expand {
-  opacity: 0;
-	animation: tracking-in-expand 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+    opacity: 0;
+    animation: tracking-in-expand 3s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 }
 
 @keyframes tracking-in-expand {
-  0% {
-    letter-spacing: -0.5em;
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    opacity: 1;
-  }
+    0% {
+        letter-spacing: -0.5em;
+        opacity: 0;
+    }
+    40% {
+        opacity: 0.6;
+    }
+    100% {
+        opacity: 1;
+    }
 }
-
 
 //TEXT-ANIMATION
 .text-focus-in {
-	animation: text-focus-in 2s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 @keyframes text-focus-in {
+    0% {
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+
+//IMAGE-ANIMATION
+.tilt-in-bottom-1 {
+	animation: tilt-in-bottom-1 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@keyframes tilt-in-bottom-1 {
   0% {
-    filter: blur(12px);
+    transform: rotateY(30deg) translateY(300px) skewY(-30deg);
     opacity: 0;
   }
   100% {
-    filter: blur(0px);
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
     opacity: 1;
   }
 }
