--- a/resources/scss/_animations.scss
+++ b/resources/scss/_animations.scss
@@ -64,6 +64,25 @@
     }
 }
 
+//DECOR TEXT ANIMATION
+.slide-in-blurred-left {
+	animation: slide-in-blurred-left 3s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+@keyframes slide-in-blurred-left {
+    0% {
+      transform: translateX(-1000px) scaleX(2.5) scaleY(0.2);
+      transform-origin: 100% 50%;
+      filter: blur(40px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0) scaleY(1) scaleX(1);
+      transform-origin: 50% 50%;
+      filter: blur(0);
+      opacity: 1;
+    }
+  }
+
 //IMAGE-ANIMATION
 .tilt-in-bottom-1 {
 	animation: tilt-in-bottom-1 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -78,3 +97,4 @@
     opacity: 1;
   }
 }
+
